# object-difference-builder

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: main_ci.yml
gendiff/: __init__.py  cli.py  consts.py  gen_diff.py  gendiff.py  generate_diff.py  get_dict_diff.py  get_file_content.py  parser.py
gendiff/diff_converter/: plain.py  stylish.py  to_json.py
gendiff/scripts/: gen_diff.py
hexlet_code/: gendiff.py
tests/: conftest.py  test_dif_converter.py  test_dif_converter_plain.py  test_dif_converter_stylish.py  test_diff_converter_to_json.py  test_gendiff.py  test_get_dict_diff.py  test_get_file_content.py  test_parser.py
tests/fixtures/: dict_example.py  diff_eample.py  diff_example.py  simple_obj.txt
